header responsive con bootstrap

--- a/index.html
+++ b/index.html
@@ -22,6 +22,62 @@
     <!-- header -->
     <header>
 
+      <!-- <div class="container"> -->
+
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+
+            <!-- Menu Dropdown e Link -->
+            <div class="row">
+              <a class="navbar-brand" href="#">
+                <img src="immagini/logo.svg" alt="home">
+              </a>
+
+              <ul class="nav navbar-nav col-md-6 visible-lg-inline-block">
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                </li>
+
+                <li class="nav-link">
+                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                </li>
+
+                <li class="nav-link">
+                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                </li>
+
+                <li class="nav-link">
+                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                </li>
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                </li>
+
+                <li class="nav-link">
+                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                </li>
+              </ul>
+
+              <button type="button" class="btn btn-default navbar-btn navbar-right hidden-xs">Sign in</button>
+
+              <!-- Menù hamburger -->
+              <button type="button" class="btn btn-default btn-lg visible-xs-inline-block pull-right">
+                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> Star
+            </button>
+
+            </div>
+
+
+
+          </div>
+        </nav>
+      <!-- </div> -->
+
+
+
+
     </header>
 
 
