--- a/index.html
+++ b/index.html
@@ -22,57 +22,80 @@
     <!-- header -->
     <header>
 
-      <!-- <div class="container"> -->
 
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
+          <nav class="navbar-default">
+          <div class="container  visible-lg">
 
-            <!-- Menu Dropdown e Link -->
+            <!-- nav bar superiore -->
             <div class="row">
-              <a class="navbar-brand" href="#">
-                <img src="immagini/logo.svg" alt="home">
+              <button type="button" class="btn btn-info btn-nav">new</button>
+
+              <a href="#">DigitalOcean Kubernetes is now Generally Available. Learn more
               </a>
 
-              <ul class="nav navbar-nav col-md-6 visible-lg-inline-block">
+              <div class="nav-sup pull-right collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                  <li class=""><a href="#">Docs</a></li>
+                  <li><a href="#">Support</a></li>
+                  <li><a href="#">Sales</a></li>
+                  <li><a href="#">Log-in</a></li>
+                </ul>
 
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                </li>
-
-                <li class="nav-link">
-                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
-                </li>
-
-                <li class="nav-link">
-                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
-                </li>
-
-                <li class="nav-link">
-                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
-                </li>
-
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                </li>
-
-                <li class="nav-link">
-                  <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
-                </li>
-              </ul>
-
-              <button type="button" class="btn btn-default navbar-btn navbar-right hidden-xs">Sign in</button>
-
-              <!-- Menù hamburger -->
-              <button type="button" class="btn btn-default btn-lg visible-xs-inline-block pull-right">
-                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> Star
-            </button>
-
+              </div>
             </div>
-
-
-
           </div>
-        </nav>
+
+
+
+
+            <!-- Menu Dropdown e Link -->
+            <div class="container">
+              <div class="row">
+                <a class="navbar-brand" href="#">
+                  <img src="immagini/logo.svg" alt="home">
+                </a>
+
+                <ul class="nav navbar-nav visible-lg">
+
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  </li>
+
+                  <li class="nav-link">
+                    <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                  </li>
+
+                  <li class="nav-link">
+                    <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                  </li>
+
+                  <li class="nav-link">
+                    <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                  </li>
+
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                  </li>
+
+                  <li class="nav-link">
+                    <a href="#" class="" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span></span></a>
+                  </li>
+                </ul>
+
+                <button type="button" class="btn btn-default navbar-btn navbar-right visible-lg">Sign in</button>
+
+                <!-- Menù hamburger -->
+                <button type="button" class="btn btn-default btn-lg hidden-lg pull-right">
+                  <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> Star
+              </button>
+
+              </div>
+            </div>
+          </nav>
+
+
+
+
       <!-- </div> -->
 
 
