--- a/index.html
+++ b/index.html
@@ -92,20 +92,56 @@
               </div>
             </div>
           </nav>
-
-
-
-
-      <!-- </div> -->
-
-
-
-
     </header>
 
 
     <!-- Section 0 con form -->
-    <section id="">
+    <section id="section_0">
+      <div class="container-body">
+        <div class="row">
+
+          <!-- Colonna testuale -->
+          <div class="col-lg-6">
+            <h1>Welcome to the developer cloud </h1>
+            <p>We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand. </p>
+
+          </div>
+
+          <!-- Colonna con Form -->
+          <div class="col-lg-6">
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox"> Remember me
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Sign in</button>
+                </div>
+              </div>
+            </form>
+          </div>
+
+        </div>
+
+      </div>
 
     </section>
 
