Sezioni con slide img centrael create

--- a/index.html
+++ b/index.html
@@ -147,7 +147,25 @@
 
 
     <!-- Section 1 Loghi Customers -->
-    <section id="">
+    <section id="section_1">-
+      <div class="container  text-center">
+        <p class="text-uppercase">Innovative businesses trust DigitalOcean</p>
+
+        <div class="row">
+
+          <ul class="logo-list col-lg-12 text-center">
+            <li class="col-lg-2 col-xs-6"><img src="immagini/gitlab-166e2067.png" alt=""> </li>
+            <li class="col-lg-2 col-xs-6"><img src="immagini/docker-bab60eeb.png" alt=""> </li>
+            <li class="col-lg-2 col-xs-6"><img src="immagini/slack-e20293da.png" alt=""> </li>
+            <li class="col-lg-2 col-xs-6"><img src="immagini/hashicorp-4431df79.png" alt=""> </li>
+            <li class="col-lg-2 col-xs-6"><img src="immagini/wework-be6eab32.png" alt=""> </li>
+            <li class="col-lg-2 col-xs-6"><img src="immagini/splunk-06b17d75.png" alt=""> </li>
+          </ul>
+        </div>
+
+        <span><a class="text-center" href="#">View customer stories</a></span>
+
+      </div>
 
     </section>
 
@@ -157,7 +175,21 @@
     </section>
 
     <!-- Section 3 slide img -->
-    <section id="">
+    <section id="section_3">
+      <div class="container-small text-center">
+        <h2>Designed for developers </h2>
+        <h4>
+          Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
+        </h4>
+        <div class="slide-content">
+          <img src="immagini/screenshot-create-kubernetes-cluster-4a930955.jpg" alt="">
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+
+      </div>
 
     </section>
 
@@ -172,9 +204,24 @@
     </section>
 
     <!-- Section 6 Simile a 3 -->
-    <section id="">
+    <section id="section_6">
+      <div class="container-small text-center">
+        <h2>Designed for developers </h2>
+        <h4>
+          Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.
+        </h4>
+        <div class="slide-content">
+          <img src="immagini/screenshot-create-kubernetes-cluster-4a930955.jpg" alt="">
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+
+      </div>
 
     </section>
+
 
     <!-- Section 7 -->
     <section id="">
