--- a/index.html
+++ b/index.html
@@ -230,6 +230,89 @@
 
     <!-- Footer -->
     <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-xs-12">
+
+            <img src="immagini/logo-footer.svg" alt="">
+
+            <p>
+              <span>© 2019 DigitalOcean, LLC. All rights reserved.</span>
+            </p>
+
+            <ul class="social-footer">
+              <li><a href="#"><img src="immagini/twitter.svg" alt=""> </a></li>
+              <li><a href="#"><img src="immagini/facebook.svg" alt=""> </a></li>
+              <li><a href="#"><img src="immagini/instagram.svg" alt=""> </a></li>
+              <li><a href="#"><img src="immagini/youtube.svg" alt=""> </a></li>
+              <li><a href="#"><img src="immagini/linkedin.svg" alt=""> </a></li>
+              <li><a href="#"><img src="immagini/glassdor.svg" alt=""> </a></li>
+
+            </ul>
+
+          </div>
+
+          <!-- Colonne elenco collegamenti -->
+          <div class="col-md-4 col-xs-12 collegamenti ">
+            <ul class="col-xs-6">
+              <li><span>Company</span></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Leadership</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Carrers</a></li>
+              <li><a href="#">Partners</a></li>
+              <li><a href="#">Refferral Program</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Legal & Security</a></li>
+            </ul>
+
+            <ul class="col-md-4 col-xs-6">
+              <li><span>Product</span></li>
+              <li><a href="#">Product Overview</a></li>
+              <li><a href="#">Droplets</a></li>
+              <li><a href="#">Kubernetes</a></li>
+              <li><a href="#">Managed Database</a></li>
+              <li><a href="#">Spaces</a></li>
+              <li><a href="#">Marketplace</a></li>
+              <li><a href="#">Laoda Balance</a></li>
+              <li><a href="#">Block Storage</a></li>
+              <li><a href="#">Tools & Integration</a></li>
+              <li><a href="#">API</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Documentatin</a></li>
+              <li><a href="#">Relates Note</a></li>
+
+            </ul>
+          </div>
+
+          <div class="col-md-4 col-xs-12 collegamenti">
+            <ul class="col-xs-6">
+              <li><span>Community</span></li>
+              <li><a href="#">Droplets</a></li>
+              <li><a href="#">Kubernetes</a></li>
+              <li><a href="#">Managed Database</a></li>
+              <li><a href="#">Spaces</a></li>
+              <li><a href="#">Marketplace</a></li>
+              <li><a href="#">Laoda Balance</a></li>
+              <li><a href="#">Block Storage</a></li>
+              <li><a href="#">Tools & Integration</a></li>
+              <li><a href="#">API</a></li>
+              <li><a href="#">Pricing</a></li>
+            </ul>
+
+            <ul class="col-xs-6">
+              <li><span>Contact</span></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="#">Sales</a></li>
+              <li><a href="#">Report Abuse</a></li>
+              <li><a href="#">System Status</a></li>
+
+            </ul>
+          </div>
+
+        </div>
+
+      </div>
 
     </footer>
   </body>
