Section_2 (Lista e blocco testo) creata

--- a/index.html
+++ b/index.html
@@ -170,7 +170,69 @@
     </section>
 
     <!-- Section 2 Blocco Lista con colonne flottate -->
-    <section id="">
+    <section id="section_2">
+      <div class="container-small">
+        <h2 class="text-center">Deploy and scale seamlessly</h2>
+        <p class="text-center">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+
+        <!-- Griglia con lista  -->
+        <div class="row">
+          <div class="col-md-4 col-xs-12">
+            <ul class="text-capitalize">
+              <li><a href="#">Deploy</a></li>
+              <li><a href="#">scale</a></li>
+              <li><a href="#">store</a></li>
+              <li><a href="#">secure</a></li>
+              <li><a href="#">monitor</a></li>
+            </ul>
+          </div>
+          <!-- Blocchi testo -->
+          <div class="col-md-4 col-xs-12 blocco-testo">
+            <div class="col-md-12 col-xs-6">
+
+              <img src="immagini/timone-ico.svg" alt="">
+              <h4>Kubernetes in minutes</h4>
+              <p>
+                Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.
+              </p>
+            </div>
+
+            <div class="col-md-12 col-xs-6">
+
+              <img src="immagini/icon-folder.svg" alt="">
+              <h4>1-Click App Marketplace</h4>
+              <p>
+                Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.
+              </p>
+            </div>
+          </div>
+
+          <!-- Secondo Blocco testo -->
+          <div class="col-md-4 col-xs-12">
+            <div class="col-md-12 col-xs-6">
+
+              <img src="immagini/goccia-ico.svg" alt="">
+              <h4>Flexible compute types</h4>
+              <p>
+                With Standard, General Purpose, or CPU-Optimized Droplets, choose the right infrastructure for your workload.
+              </p>
+            </div>
+
+            <div class="col-md-12 col-xs-6">
+
+              <img src="immagini/global-ico.svg" alt="">
+              <h4>Global availability</h4>
+              <p>
+                Deploy to any of our data center locations – New York, SF, London, Amsterdam, Bangalore, and more.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
 
     </section>
 
@@ -203,8 +265,8 @@
       <div class="container text-center">
         <h2>Service your customers around the world from 12 regions.</h2>
 
-        <div class="row">
-          <table class="col-md-6 col-xs-12">
+        <div class="row ">
+          <table class="col-xs-12 col-md-6">
             <tr>
               <td><span class="table-id">ams2</span> </td>
               <td>Amsterdam, Nederlands</td>
@@ -242,7 +304,7 @@
             </tr>
           </table>
 
-          <table class="col-md-6 col-xs-12">
+          <table class="col-xs-12 col-md-6">
             <tr>
               <td><span class="table-id">ams2</span> </td>
               <td>Amsterdam, Nederlands</td>
