--- a/index.html
+++ b/index.html
@@ -256,7 +256,51 @@
     </section>
 
     <!-- Section 4, titolo e 3 colonne flottate -->
-    <section id="">
+    <section id="section_4">
+      <div class="container">
+        <h2 class="text-center">Built for business</h2>
+
+        <div class="row">
+          <div class="col-md-4 col-xs-6" >
+
+            <img src="immagini/ico-ico.svg" alt="">
+            <h4>Reliable platform</h4>
+            <p>
+              More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.
+            </p>
+            <a href="#">Security
+              <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+
+          </div>
+
+          <div class="col-md-4 col-xs-6" >
+
+            <img src="immagini/list-ico.svg" alt="">
+            <h4>Predictable pricing</h4>
+            <p>
+              Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.
+            </p>
+            <a href="#">Pricing
+              <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+
+          </div>
+
+          <div class="col-md-4 col-xs-6" >
+            <img src="immagini/service-ico.svg" alt="">
+            <h4>World-class service</h4>
+            <p>
+              Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.
+            </p>
+            <a href="#">Support
+              <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+          </div>
+
+        </div>
+
+      </div>
 
     </section>
 
