Problema Spaziatura colonne risolto

--- a/index.html
+++ b/index.html
@@ -310,81 +310,87 @@
         <h2>Service your customers around the world from 12 regions.</h2>
 
         <div class="row ">
-          <table class="col-xs-12 col-md-6">
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+          <div class="col-xs-12 col-md-6">
+            <table class="">
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
-          </table>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-          <table class="col-xs-12 col-md-6">
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
+            </table>
+          </div>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+          <div class="col-xs-12 col-md-6">
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+            <table class="">
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
 
-            <tr>
-              <td><span class="table-id">ams2</span> </td>
-              <td>Amsterdam, Nederlands</td>
-              <td><a href="#">Test Speed</a></td>
-            </tr>
-          </table>
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
+
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
+
+              <tr>
+                <td><span class="table-id">ams2</span> </td>
+                <td>Amsterdam, Nederlands</td>
+                <td><a href="#">Test Speed</a></td>
+              </tr>
+            </table>
+          </div>
 
         </div>
 
