--- a/index.html
+++ b/index.html
@@ -108,36 +108,45 @@
           </div>
 
           <!-- Colonna con Form -->
-          <div class="col-lg-6">
-            <form class="form-horizontal">
-              <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> Remember me
-                    </label>
+          <div class="col-lg-4 col-lg-offset-2">
+
+            <div class="form">
+
+              <h2 class="text-center">Deploy in seconds</h2>
+
+              <form class="form-horizontal">
+                <div class="form-group">
+
+                  <div class="col-sm-12">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
                   </div>
                 </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">Sign in</button>
+
+                <div class="form-group">
+                  <div class="col-sm-12">
+
+                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+
+                  </div>
                 </div>
-              </div>
-            </form>
-          </div>
+
+                <div class="form-group">
+                  <div class="col-sm-12 col-md-12">
+
+                    <a href="#"class="green-btn">
+                      <img src="" alt="">
+                      Create your account
+                    </a>
+                    <a href="#"class="google-btn">
+                      <img src="immagini/google-ico.svg" alt="">
+                      Sign up with Google
+                    </a>
+
+                  </div>
+                </div>
+              </form>
+            </div>
+        </div>
 
         </div>
 
