Form Completo di margini e padding

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 
     <!-- Section 0 con form -->
-    <section id="section_0">
+    <section id="section_0" class="home">
       <div class="container-body">
         <div class="row">
 
@@ -112,7 +112,9 @@
 
             <div class="form">
 
-              <h2 class="text-center">Deploy in seconds</h2>
+              <div class="col-lg-12 title-box">
+                <h2 class="text-center">Deploy in seconds</h2>
+              </div>
 
               <form class="form-horizontal">
                 <div class="form-group">
@@ -145,6 +147,15 @@
                   </div>
                 </div>
               </form>
+              <span class="note text-center">
+                <p>
+                  By signing up you agree to the
+                  <a href="#">
+                    Terms of Service.
+                  </a>
+                </p>
+              </span>
+
             </div>
         </div>
 
