--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 
+    <!-- Font awesome -->
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/master.css">
 
 
@@ -24,7 +28,7 @@
 
 
           <nav class="navbar-default">
-          <div class="container  visible-lg">
+          <div class="container-nav visible-lg">
 
             <!-- nav bar superiore -->
             <div class="row">
@@ -49,7 +53,7 @@
 
 
             <!-- Menu Dropdown e Link -->
-            <div class="container">
+            <div class="container-nav">
               <div class="row">
                 <a class="navbar-brand" href="#">
                   <img src="immagini/logo.svg" alt="home">
@@ -85,8 +89,8 @@
                 <button type="button" class="btn btn-default navbar-btn navbar-right visible-lg">Sign in</button>
 
                 <!-- Menù hamburger -->
-                <button type="button" class="btn btn-default btn-lg hidden-lg pull-right">
-                  <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span> Star
+                <button type="button" id="hamburgher" class=" hidden-lg pull-right">
+                  <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
               </button>
 
               </div>
@@ -101,7 +105,7 @@
         <div class="row">
 
           <!-- Colonna testuale -->
-          <div class="col-lg-6">
+          <div class="col-lg-6 col-header">
             <h1>Welcome to the developer cloud </h1>
             <p>We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand. </p>
 
@@ -457,17 +461,40 @@
 
             <img src="immagini/logo-footer.svg" alt="">
 
-            <p>
-              <span>© 2019 DigitalOcean, LLC. All rights reserved.</span>
-            </p>
+
+              <span class="note">
+                <p>
+                  © 2019 DigitalOcean, LLC. All rights reserved.
+                </p>
+              </span>
+
 
             <ul class="social-footer">
-              <li><a href="#"><img src="immagini/twitter.svg" alt=""> </a></li>
-              <li><a href="#"><img src="immagini/facebook.svg" alt=""> </a></li>
-              <li><a href="#"><img src="immagini/instagram.svg" alt=""> </a></li>
-              <li><a href="#"><img src="immagini/youtube.svg" alt=""> </a></li>
-              <li><a href="#"><img src="immagini/linkedin.svg" alt=""> </a></li>
-              <li><a href="#"><img src="immagini/glassdor.svg" alt=""> </a></li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-twitter fa-2x"></i>
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i>
+               </a></li>
+              <li>
+                <a href="#">
+                  <i class="fab fa-linkedin fa-2x"></i>
+               </a>
+             </li>
+
+              <li>
+                <a href="#">
+                  <i class="fab fa-youtube fa-2x"></i>
+                </a>
+              </li>
 
             </ul>
 
