MANCANO ULTIME MODIFICHE SPAZIATURE SEZIONE ED IMMAGINI

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
         <div class="row">
 
           <!-- Colonna testuale -->
-          <div class="col-lg-6 col-header">
+          <div class="col-lg-5 col-md-6 col-header">
             <h1>Welcome to the developer cloud </h1>
             <p>We make it simple to launch in the cloud and scale up as you grow—whether you’re running one virtual machine or ten thousand. </p>
 
           </div>
 
           <!-- Colonna con Form -->
-          <div class="col-lg-4 col-lg-offset-2">
+          <div class="col-lg-4 col-lg-offset-2 col-md-6">
 
             <div class="form">
 
