--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
           <nav class="navbar-default">
-          <div class="container-nav visible-lg">
+          <div class="container-nav note visible-lg">
 
             <!-- nav bar superiore -->
             <div class="row">
