--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
           <nav class="navbar-default">
-          <div class="container-nav note visible-lg">
+          <div class="container-nav nav_1 visible-lg">
 
             <!-- nav bar superiore -->
             <div class="row">
@@ -37,8 +37,8 @@
               <a href="#">DigitalOcean Kubernetes is now Generally Available. Learn more
               </a>
 
-              <div class="nav-sup pull-right collapse navbar-collapse">
-                <ul class="nav navbar-nav">
+              <div class="col-lg-6 nav-sup pull-right collapse navbar-collapse">
+                <ul class="col-lg-12">
                   <li class=""><a href="#">Docs</a></li>
                   <li><a href="#">Support</a></li>
                   <li><a href="#">Sales</a></li>
