--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               <a href="#">DigitalOcean Kubernetes is now Generally Available. Learn more
               </a>
 
-              <div class="col-lg-6 nav-sup pull-right collapse navbar-collapse">
-                <ul class="col-lg-12">
+              <div class="pull-right">
+                <ul class="">
                   <li class=""><a href="#">Docs</a></li>
                   <li><a href="#">Support</a></li>
                   <li><a href="#">Sales</a></li>
@@ -53,7 +53,7 @@
 
 
             <!-- Menu Dropdown e Link -->
-            <div class="container-nav">
+            <div class="container-nav header_2">
               <div class="row">
                 <a class="navbar-brand" href="#">
                   <img src="immagini/logo.svg" alt="home">
